# gv343_game_section2

./: .gitignore  Animator.cpp  Boss.cpp  Bullet.cpp  CMakeLists.txt  Coin.cpp  Collectable.cpp  Collectible.cpp  Credits.cpp  Credits.hpp  Game.cpp  Game.hpp  Highscore.cpp  Highscore.h  Intro.cpp  IntroEntity.cpp  IntroInstruction.cpp  Monster.cpp  MovingScene.cpp  Orc.cpp  Person.cpp  README.md  RagingOrc.cpp  Sandwich.cpp  Specter.cpp  Sword.cpp  Sword.hpp  Weapons.cpp  Weapons.hpp  WindowLoader.cpp  main.cpp  nomb
collectible/: Collectible.hpp
include/: Animator.hpp  Bullet.hpp  Coin.hpp  Collectable.hpp  Collectible.hpp  Credits.hpp  Game.hpp  Intro.hpp  IntroEntity.hpp  IntroInstruction.hpp  Monster.hpp  MovingScene.hpp  Person.hpp  Sandwich.hpp  Settings.hpp  Weapons.hpp  WindowLoader.hpp
intros/: entityList.txt  instructionList.csv  instructionList.txt  soundList.txt
sounds/: credits
